# devcontainer

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
src/sample_app/: fizzbuzz.py  main.py
tests/: test_fizzbuzz.py
