[project]
name = "sample-app"
version = "0.1.0"
description = "Sample Python devcontainer project"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "ty"]

[project.scripts]
sample-app = "sample_app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
